--- a/Demo/service/pom.xml
+++ b/Demo/service/pom.xml
@@ -60,12 +60,13 @@
                             <goal>qarcher</goal>
                         </goals>
                         <configuration>
-                            <skip>true</skip>
+                            <skip>false</skip>
+                            <serviceName>demo</serviceName>
                             <qarcherService>http://dsagregator2:8030</qarcherService>
                             <targetPackage>ru.diasoft.digitalq</targetPackage>
-                            <qarcherModuleName>DQ Mobile Investment Client Portfolio</qarcherModuleName>
+                            <qarcherModuleName>DQ Hackathon Tutorial</qarcherModuleName>
                             <!--    -->
-                            <qarcherVersion>1.01.01</qarcherVersion>
+                            <qarcherVersion>1.01.00</qarcherVersion>
                             <!--    -->
                             <restApi>${dqcodegen.rest.api}</restApi>
                             <restModuleSplit>true</restModuleSplit>
@@ -73,8 +74,6 @@
                             <useReactiveApi>false</useReactiveApi>
                             <useJsonNodeType>true</useJsonNodeType>
                             <useResponseDTO>true</useResponseDTO>
-                            <generateCrud>true</generateCrud>
-                            <crudAudit>true</crudAudit>
                         </configuration>
                     </execution>
                     <execution>
