gateway api works

--- a/APIGateway/pom.xml
+++ b/APIGateway/pom.xml
@@ -1,30 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>ru.diasoft.micro</groupId>
-    <artifactId>archetype-parent</artifactId>
-    <version>2.02.03-22021801</version>
-  </parent>
-  <groupId>ru.diasoft.digitalq</groupId>
-  <artifactId>apigateway-parent</artifactId>
-  <version>1.00.01-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>apigateway - parent</name>
-  <url>http://www.diasoft.com</url>
-  <modules>
-    <module>database</module>
-    <module>service</module>
-    <module>bundle</module>
-  </modules>
-  <distributionManagement>
-    <repository>
-      <id>diasoft_repo</id>
-      <url>http://maven:8080/maven2/repo/</url>
-    </repository>
-  </distributionManagement>
-  <properties>
-    <archetype-bom.version>2.02.03-22021801</archetype-bom.version>
-  </properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.6.6</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
+	<groupId>ru.diasoft.digitalq</groupId>
+	<artifactId>APIGateway</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>APIGateway</name>
+	<description>Demo project for Spring Boot</description>
+	<properties>
+		<java.version>11</java.version>
+		<spring-cloud.version>2021.0.1</spring-cloud.version>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-gateway</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
